fix some warning in code